image/test/gtest/TestDecoders.cpp
@@ -34,6 +34,11 @@ using namespace mozilla::image;
 static already_AddRefed<SourceSurface>
 CheckDecoderState(const ImageTestCase& aTestCase, Decoder* aDecoder)
 {
+  // Decoder should match what we asked for in the MIME type.
+  EXPECT_NE(aDecoder->GetType(), DecoderType::UNKNOWN);
+  EXPECT_EQ(aDecoder->GetType(),
+            DecoderFactory::GetDecoderType(aTestCase.mMimeType));
+
   EXPECT_TRUE(aDecoder->GetDecodeDone());
   EXPECT_EQ(bool(aTestCase.mFlags & TEST_CASE_HAS_ERROR),
             aDecoder->HasError());
@@ -119,7 +124,8 @@ void WithSingleChunkDecode(const ImageTestCase& aTestCase,
                                            DecoderFlags::FIRST_FRAME_ONLY,
                                            DefaultSurfaceFlags());
   ASSERT_TRUE(decoder != nullptr);
-  RefPtr<IDecodingTask> task = new AnonymousDecodingTask(WrapNotNull(decoder));
+  RefPtr<IDecodingTask> task =
+    new AnonymousDecodingTask(WrapNotNull(decoder), /* aResumable */ false);
 
   // Run the full decoder synchronously.
   task->Run();
@@ -132,6 +138,58 @@ static void
 CheckDecoderSingleChunk(const ImageTestCase& aTestCase)
 {
   WithSingleChunkDecode(aTestCase, Nothing(), [&](Decoder* aDecoder) {
+    CheckDecoderResults(aTestCase, aDecoder);
+  });
+}
+
+template <typename Func>
+void WithDelayedChunkDecode(const ImageTestCase& aTestCase,
+                           const Maybe<IntSize>& aOutputSize,
+                           Func aResultChecker)
+{
+  nsCOMPtr<nsIInputStream> inputStream = LoadFile(aTestCase.mPath);
+  ASSERT_TRUE(inputStream != nullptr);
+
+  // Figure out how much data we have.
+  uint64_t length;
+  nsresult rv = inputStream->Available(&length);
+  ASSERT_TRUE(NS_SUCCEEDED(rv));
+
+  // Prepare an empty SourceBuffer.
+  auto sourceBuffer = MakeNotNull<RefPtr<SourceBuffer>>();
+
+  // Create a decoder.
+  DecoderType decoderType =
+    DecoderFactory::GetDecoderType(aTestCase.mMimeType);
+  RefPtr<Decoder> decoder =
+    DecoderFactory::CreateAnonymousDecoder(decoderType, sourceBuffer, aOutputSize,
+                                           DecoderFlags::FIRST_FRAME_ONLY,
+                                           DefaultSurfaceFlags());
+  ASSERT_TRUE(decoder != nullptr);
+  RefPtr<IDecodingTask> task =
+    new AnonymousDecodingTask(WrapNotNull(decoder), /* aResumable */ true);
+
+  // Run the full decoder synchronously. It should now be waiting on
+  // the iterator to yield some data since we haven't written anything yet.
+  task->Run();
+
+  // Writing all of the data should wake up the decoder to complete.
+  sourceBuffer->ExpectLength(length);
+  rv = sourceBuffer->AppendFromInputStream(inputStream, length);
+  ASSERT_TRUE(NS_SUCCEEDED(rv));
+  sourceBuffer->Complete(NS_OK);
+
+  // It would have gotten posted to the main thread to avoid mutex contention.
+  SpinPendingEvents();
+
+  // Call the lambda to verify the expected results.
+  aResultChecker(decoder);
+}
+
+static void
+CheckDecoderDelayedChunk(const ImageTestCase& aTestCase)
+{
+  WithDelayedChunkDecode(aTestCase, Nothing(), [&](Decoder* aDecoder) {
     CheckDecoderResults(aTestCase, aDecoder);
   });
 }
@@ -157,7 +215,8 @@ CheckDecoderMultiChunk(const ImageTestCase& aTestCase)
                                            DecoderFlags::FIRST_FRAME_ONLY,
                                            DefaultSurfaceFlags());
   ASSERT_TRUE(decoder != nullptr);
-  RefPtr<IDecodingTask> task = new AnonymousDecodingTask(WrapNotNull(decoder));
+  RefPtr<IDecodingTask> task =
+    new AnonymousDecodingTask(WrapNotNull(decoder), /* aResumable */ false);
 
   for (uint64_t read = 0; read < length ; ++read) {
     uint64_t available = 0;
@@ -581,6 +640,11 @@ TEST_F(ImageDecoders, PNGSingleChunk)
   CheckDecoderSingleChunk(GreenPNGTestCase());
 }
 
+TEST_F(ImageDecoders, PNGDelayedChunk)
+{
+  CheckDecoderDelayedChunk(GreenPNGTestCase());
+}
+
 TEST_F(ImageDecoders, PNGMultiChunk)
 {
   CheckDecoderMultiChunk(GreenPNGTestCase());
@@ -594,6 +658,11 @@ TEST_F(ImageDecoders, PNGDownscaleDuringDecode)
 TEST_F(ImageDecoders, GIFSingleChunk)
 {
   CheckDecoderSingleChunk(GreenGIFTestCase());
+}
+
+TEST_F(ImageDecoders, GIFDelayedChunk)
+{
+  CheckDecoderDelayedChunk(GreenGIFTestCase());
 }
 
 TEST_F(ImageDecoders, GIFMultiChunk)
@@ -611,6 +680,11 @@ TEST_F(ImageDecoders, JPGSingleChunk)
   CheckDecoderSingleChunk(GreenJPGTestCase());
 }
 
+TEST_F(ImageDecoders, JPGDelayedChunk)
+{
+  CheckDecoderDelayedChunk(GreenJPGTestCase());
+}
+
 TEST_F(ImageDecoders, JPGMultiChunk)
 {
   CheckDecoderMultiChunk(GreenJPGTestCase());
@@ -626,6 +700,11 @@ TEST_F(ImageDecoders, BMPSingleChunk)
   CheckDecoderSingleChunk(GreenBMPTestCase());
 }
 
+TEST_F(ImageDecoders, BMPDelayedChunk)
+{
+  CheckDecoderDelayedChunk(GreenBMPTestCase());
+}
+
 TEST_F(ImageDecoders, BMPMultiChunk)
 {
   CheckDecoderMultiChunk(GreenBMPTestCase());
@@ -639,6 +718,11 @@ TEST_F(ImageDecoders, BMPDownscaleDuringDecode)
 TEST_F(ImageDecoders, ICOSingleChunk)
 {
   CheckDecoderSingleChunk(GreenICOTestCase());
+}
+
+TEST_F(ImageDecoders, ICODelayedChunk)
+{
+  CheckDecoderDelayedChunk(GreenICOTestCase());
 }
 
 TEST_F(ImageDecoders, ICOMultiChunk)
@@ -661,6 +745,11 @@ TEST_F(ImageDecoders, IconSingleChunk)
   CheckDecoderSingleChunk(GreenIconTestCase());
 }
 
+TEST_F(ImageDecoders, IconDelayedChunk)
+{
+  CheckDecoderDelayedChunk(GreenIconTestCase());
+}
+
 TEST_F(ImageDecoders, IconMultiChunk)
 {
   CheckDecoderMultiChunk(GreenIconTestCase());
@@ -674,6 +763,11 @@ TEST_F(ImageDecoders, IconDownscaleDuringDecode)
 TEST_F(ImageDecoders, WebPSingleChunk)
 {
   CheckDecoderSingleChunk(GreenWebPTestCase());
+}
+
+TEST_F(ImageDecoders, WebPDelayedChunk)
+{
+  CheckDecoderDelayedChunk(GreenWebPTestCase());
 }
 
 TEST_F(ImageDecoders, WebPMultiChunk)
